Update requirements.txt with corrected dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,21 @@ pandas==2.2.2
 numpy==1.26.4
 matplotlib==3.9.2
 seaborn==0.13.2
-statsmodel
-# Machine learning
+scipy==1.14.1
+statsmodels==0.14.2
+
+# Machine Learning
 scikit-learn==1.5.2
 
-# Utilidades
+# Utilities
 python-dotenv==1.0.1
 jupyterlab==4.2.4
-pip install requests pandas
-pip install kafka-python mysql-connector-python joblib
-pip install dash plotly
-pip install mysql-connector-python python-dotenv pandas numpy
- pip install scipy
+
+# Streaming and Database
+kafka-python==2.0.2
+mysql-connector-python==9.0.0
+joblib==1.4.2
+
+# Dashboard and Visualization
+dash==2.17.1
+plotly==5.23.0
